# find_longest_way

./: Dockerfile  Makefile  README.md  custom_input_script.py
cpp_longest_way/: CMakeLists.txt
cpp_longest_way/src/: CMakeLists.txt  longest_way.cpp  longest_way.hpp  main.cpp
cpp_longest_way/test/: CMakeLists.txt  tests.cpp
data/: sample_input3.txt
prototype/data/: custom_input.txt  sample_input2.txt  sample_input3.txt  sample_input4.txt  sample_input5.txt
prototype/src/: longest_way.py
src/: CMakeLists.txt  longest_way.py
test/: CMakeLists.txt  test_longest_way.py
